Added support of custom window size
- You can now set your custom window size in the main window
- Prevention of data loss due to close a window
- Some small design changes

--- a/Login storage/Login Storage.csproj
+++ b/Login storage/Login Storage.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Forms\StorageForm.Designer.cs">
       <DependentUpon>StorageForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Settings.cs" />
     <EmbeddedResource Include="Forms\AddLoginDataForm.resx">
       <DependentUpon>AddLoginDataForm.cs</DependentUpon>
     </EmbeddedResource>
